[tool.poetry]
name = "cricket"
version = "0.1.0"
description = "Collect and analyze cricket data"
authors = ["vivekt22 <vivek-thomas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.16.0"
duckdb = "^1.1.3"
prefect = "^3.1.4"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
